# WonderwallAi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  header-mockup.html  pyproject.toml
GiLLBoT/: requirements.txt
GiLLBoT/server/: config.py  main.py
Jerry/: .gitignore  CLAUDE.md  package.json  railway.toml  shopify.app.toml  stress_test.py
Jerry/backend/: .dockerignore  .env.example  Dockerfile  main.py  test_chat.html
Jerry/blog/: cold-email.md  social-post.md
Jerry/docs/: index.html
Jerry/frontend/: package-lock.json  package.json  vite.config.ts
MeatHead/: railway.toml
Old-Gill/: .env.example  railway.toml  requirements.txt
Old-Gill/server/: auth.py  config.py  main.py
Prospect/: .env.example  railway.toml  requirements.txt
Prospect/server/: auth.py  config.py  main.py
WonderwallAi-main 3/docs/: index.html
blog/: launch-campaign.md  post.md
docs/: CNAME  dashboard.html  index.html
docs/blog/: ceiling-of-vibe-coding.html  index.html  introducing-skint-labs.html  open-sourced-ai-firewall.html
docs/jerry/: privacy.html  support.html
examples/: demo.py
marketing/: blog-launch-announcement.md  product-hunt-jerry.md  product-hunt-wonderwall.md  reddit-artificial.md  reddit-saas.md  reddit-shopify.md
server/: .env.example  Dockerfile  __init__.py  auth.py  config.py  helpers.py  instance_cache.py  main.py  middleware.py  rate_limiter.py  requirements.txt
server/api/: admin.py  billing.py  canary.py  config.py  files.py  health.py  scan.py  usage.py
server/db/: engine.py  (+1 more)
tests/: conftest.py  test_client.py  test_egress_filter.py  test_file_sanitizer.py  test_semantic_router.py  test_sentinel_scan.py
wonderwallai/: __init__.py  client.py  config.py  models.py
(+88 files in other folders)
